src/snapshots/min_2__tests__statements__assignment.snap
---
source: src/tests.rs
expression: "&r.statements"
---
[
    statements {
        position: Position {
            column: 0,
            line: 0,
        },
        statement: imports(
            imports {
                position: Position {
                    column: 0,
                    line: 0,
                },
                imports: [
                    import {
                        position: Position {
                            column: 7,
                            line: 1,
                        },
                        path: RAWIDENT(
                            Token {
                                raw: "`@std/util`",
                                position: Position {
                                    column: 4,
                                    line: 2,
                                },
                            },
                        ),
                        import_items: Some(
                            import_items {
                                position: Position {
                                    column: 15,
                                    line: 2,
                                },
                                items: [
                                    import_item {
                                        position: Position {
                                            column: 16,
                                            line: 2,
                                        },
                                        item: IDENT(
                                            Token {
                                                raw: "pipe",
                                                position: Position {
                                                    column: 17,
                                                    line: 2,
                                                },
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    import {
                        position: Position {
                            column: 24,
                            line: 2,
                        },
                        path: RAWIDENT(
                            Token {
                                raw: "`@std/math`",
                                position: Position {
                                    column: 4,
                                    line: 3,
                                },
                            },
                        ),
                        import_items: None,
                    },
                ],
            },
        ),
    },
    statements {
        position: Position {
            column: 16,
            line: 3,
        },
        statement: variable(
            variable {
                position: Position {
                    column: 16,
                    line: 3,
                },
                modifiers: [
                    modifiers {
                        position: Position {
                            column: 16,
                            line: 3,
                        },
                        modifier: MUT(
                            Token {
                                raw: "mut",
                                position: Position {
                                    column: 0,
                                    line: 7,
                                },
                            },
                        ),
                    },
                ],
                name: IDENT(
                    Token {
                        raw: "val",
                        position: Position {
                            column: 4,
                            line: 7,
                        },
                    },
                ),
                body: body {
                    position: Position {
                        column: 9,
                        line: 7,
                    },
                    value: primitive_value(
                        number(
                            number {
                                position: Position {
                                    column: 9,
                                    line: 7,
                                },
                                negative: None,
                                whole: NUMBER(
                                    Token {
                                        raw: "0",
                                        position: Position {
                                            column: 10,
                                            line: 7,
                                        },
                                    },
                                ),
                            },
                        ),
                    ),
                    expressions: [],
                },
            },
        ),
    },
    statements {
        position: Position {
            column: 12,
            line: 7,
        },
        statement: function(
            function {
                position: Position {
                    column: 12,
                    line: 7,
                },
                modifiers: [],
                name: IDENT(
                    Token {
                        raw: "setVal",
                        position: Position {
                            column: 0,
                            line: 9,
                        },
                    },
                ),
                arguments: Some(
                    arguments {
                        position: Position {
                            column: 7,
                            line: 9,
                        },
                        arguments: [],
                        last: IDENT(
                            Token {
                                raw: "v",
                                position: Position {
                                    column: 7,
                                    line: 9,
                                },
                            },
                        ),
                    },
                ),
                body: body {
                    position: Position {
                        column: 11,
                        line: 9,
                    },
                    value: primitive_value(
                        IDENT(
                            Token {
                                raw: "v",
                                position: Position {
                                    column: 4,
                                    line: 10,
                                },
                            },
                        ),
                    ),
                    expressions: [
                        expressions {
                            position: Position {
                                column: 5,
                                line: 10,
                            },
                            expression: assingment_operation(
                                assingment_operation {
                                    position: Position {
                                        column: 5,
                                        line: 10,
                                    },
                                    identifier: IDENT(
                                        Token {
                                            raw: "val",
                                            position: Position {
                                                column: 9,
                                                line: 10,
                                            },
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            },
        ),
    },
]
